[gd_scene load_steps=10 format=3 uid="uid://2wh1yvhmyesg"]

[ext_resource type="Script" uid="uid://bvqcsdsfu5umh" path="res://scenes/quests/story_quests/you/2_weapon/weapon_transition.gd" id="1_2wtwf"]
[ext_resource type="LabelSettings" uid="uid://ntuy6ilijyiu" path="res://scenes/quests/story_quests/you/transition_font.tres" id="1_eucs2"]
[ext_resource type="FontFile" uid="uid://d05uo8wmexkd8" path="res://assets/third_party/fonts/m6x11plus.ttf" id="3_56bmb"]
[ext_resource type="AudioStream" uid="uid://bei5vkccws3kd" path="res://scenes/quests/story_quests/you/transition_you.mp3" id="3_u06w3"]
[ext_resource type="AudioStream" uid="uid://calvx4882bhpx" path="res://scenes/quests/story_quests/you/continue_sound.mp3" id="5_354tl"]

[sub_resource type="LabelSettings" id="LabelSettings_354tl"]
font = ExtResource("3_56bmb")
font_size = 100

[sub_resource type="Animation" id="Animation_u06w3"]
resource_name = "switch_scene_final"
length = 2.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AspectRatioContainer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_56bmb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AspectRatioContainer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56bmb"]
_data = {
&"RESET": SubResource("Animation_56bmb"),
&"switch_scene_final": SubResource("Animation_u06w3")
}

[node name="WeaponTransition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wtwf")
next_scene = "uid://cufkthb25mpxy"

[node name="AspectRatioContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CAPITULO 2: ESPADA"
label_settings = ExtResource("1_eucs2")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label2" type="Label" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "CONTINUARA..."
label_settings = SubResource("LabelSettings_354tl")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u06w3")
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_56bmb")
}

[node name="continue_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_354tl")
